# gazebo_worlds_collection

./: CMakeLists.txt  README.md
launch/: spawn_world.launch
models/my_ground_plane/: model.config  model.sdf
models/my_ground_plane/materials/scripts/: my_ground_plane.material
worlds/: chessboard.world
